syntax = "proto3";

// import "google/protobuf/timestamp.proto";

package io.trackterra.srv.wallet;

service WalletService {
    rpc ParseWallet(ParseWalletRequest) returns (ParseWalletResponse) {}
    rpc CreateTxs(CreateTxsRequest) returns (CreateTxsResponse) {}
    rpc ReadWallet(ReadWalletRequest) returns (ReadWalletResponse) {}
    rpc UpdateWallet(UpdateWalletRequest) returns (UpdateWalletResponse) {}
    rpc ReadWalletDetail(ReadWalletDetailRequest) returns (ReadWalletDetailResponse) {}
    rpc FindWallets(FindWalletsRequest) returns (FindWalletsResponse) {}

    rpc CreateTx(CreateTxRequest) returns (CreateTxResponse) {}    
    rpc DeleteTx(DeleteTxRequest) returns (DeleteTxResponse) {}

    rpc ReadTx(ReadTxRequest) returns (ReadTxResponse) {}
    rpc FindTxs(FindTxsRequest) returns (FindTxsResponse) {}
    rpc PickUnparsedTxs(PickUnparsedTxsRequest) returns (PickUnparsedTxsResponse) {}
}

message RestPaginate {
    int32 skip = 1;
    int32 limit = 2;
}

message GQLPaginate {
    int32 first = 1;
    int32 last = 2;
    string after = 3;
    string before = 4;
}

message Paginate {
    RestPaginate rest = 1;
    GQLPaginate gql = 2;
}

message Wallet {
    string id = 1;
    string address = 2;
    int32 highest_parsed_block = 3;
    int32 status = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message WalletExtras {
    string sAddress = 1;
    bool parsed = 3;
}

message ReadWalletRequest {
    string address = 1;
}

message ReadWalletResponse {
    Wallet wallet = 1;
    WalletExtras extras = 2;
}

message ReadWalletDetailRequest {
    string address = 1;
}

message TopActiveContract {
    string contract = 1;
    int32 count = 2;
}

message TopOperation {
    string operation = 1;
    int32 count = 2;
}

message ReadWalletDetailResponse {
    string address = 1;
    int32 txCount = 2;
    int32 unclassifiedTxCount = 3;
    string lastParsingTime = 4;
    int32 highestParsedBlock = 5;
    repeated TopActiveContract topActiveContracts = 6;
    repeated TopOperation topOperations = 7;
}

message FindWalletsRequest {
    string filter = 1;
    RestPaginate paginate = 2;
}

message FindWalletsResponse {
    repeated Wallet wallets = 1;
}

message ParseWalletRequest {
    string address = 1;
}

message ParseWalletResponse {
    int32 number_of_new_parsed_txs = 1;
    ParsingStatus status = 2;
    string msg = 3;
}

enum ParsingStatus {
    PARSING = 0;
    DONE = 1;
    FAILED = 2;
}

// s: Short
// r: Readable
message TxExtra {
    string sTxHash = 1;
    string rTimestamp = 2;
    string sWalletAddress = 3;
    string sContract = 4;
    string sSender = 5;
    string sRecipient = 6;
}

message Tx {
    string id = 1;
    string txhash = 2;
    string block_height = 3;
    string timestamp = 4;
    string protocol = 5;
    string label = 6;
    string tag = 7;
    string wallet_address = 8;
    string contract = 9;
    string sender = 10;
    string recipient = 11;
    string received_amount = 12;
    string received_token = 13;
    string received_token_contract = 14;
    string sent_amount = 15;
    string sent_token = 16;
    string sent_token_contract = 17;
    string fee_amount = 18;
    string fee_token = 19;
    string tax_amount = 20;
    string tax_token = 21;
    string net_worth_amount = 22;
    string net_worth_token = 23;
    string memo = 24;
    string friendly_description = 25;
    string createdAt = 26;
    string updatedAt = 27;
}

message TxCointracker {
    string id = 1;
    string timestamp = 2;
    string received_amount = 3;
    string received_token = 4;
    string sent_amount = 5;
    string sent_token = 6;
    string fee_amount = 7;
    string fee_token = 8;
    string label = 9;
    string tag = 10;
}

message TxKoinly {
    string id = 1;
    string txhash = 2;
    string timestamp = 3;
    string label = 4;
    string tag = 5;
    string received_amount = 6;
    string received_token = 7;
    string sent_amount = 8;
    string sent_token = 9;
    string fee_amount = 10;
    string fee_token = 11;
    string net_worth_amount = 12;
    string net_worth_token = 13;
    string friendly_description = 14;
}

message TxNode {
    Tx tx = 1;
    TxExtra extras = 2; 
}

message TxKoinlyNode {
    TxKoinly tx = 1;
    TxExtra extras = 2; 
}

message TxCointrackerNode {
    TxCointracker tx = 1;
    TxExtra extras = 2; 
}

message TxEdge {
    string cursor = 1;
    TxNode node = 2;
}

message PageInfo {
    string pageInfo = 1;
    string hasNextPage = 2;
    string hasPreviousPage = 3;
    string endCursor = 4;
    string startCursor = 5;
}

message CreateTxRequest {
    string txhash = 1;
    string block_height = 2;
    string timestamp = 3;
    string protocol = 4;
    string label = 5;
    string tag = 6;
    string wallet_address = 7;
    string contract = 8;
    string sender = 9;
    string recipient = 10;
    string received_amount = 11;
    string received_token = 12;
    string received_token_contract = 13;
    string sent_amount = 14;
    string sent_token = 15;
    string sent_token_contract = 16;
    string fee_amount = 17;
    string fee_token = 18;
    string tax_amount = 19;
    string tax_token = 20;
    string net_worth_amount = 21;
    string net_worth_token = 22;
    string memo = 23;
    string friendly_description = 24;
}

message CreateTxResponse {
    Tx tx = 1;
}

message CreateTxsRequest {
    repeated CreateTxRequest txs = 1;
}

message CreateTxsResponse {
    ParsingStatus status = 2;
}

message DeleteTxRequest {
    string id = 1;
}

message DeleteTxResponse {
    Tx tx = 1;
}

message ReadTxRequest {
    string filter = 1;
}

message ReadTxResponse {
    Tx tx = 1;
}

message FindTxsRequest {
    string address = 1;
    string filter = 2;
    RestPaginate paginate = 3;
    string order = 4;
    string orderBy = 5;
    bool csv = 6;
    string taxapp = 7;
}

message FindTxsResponse {
    repeated TxNode txs = 1;
    int32 totalCount = 2;
    string csvFileName = 3;
}

message FindTxsResponseKoinly {
    repeated TxKoinlyNode txs = 1;
    int32 totalCount = 2;
}

message FindTxsResponseCointracker {
    repeated TxCointrackerNode txs = 1;
    int32 totalCount = 2;
}

message PickUnparsedTxsRequest {
    repeated string txhashes = 1;
}

message PickUnparsedTxsResponse {
    repeated string txhashes = 1;
}

message UpdateWalletRequest {
    uint32 highest_parsed_block = 1;
    uint32 status = 2;
    string address = 3;
}

message UpdateWalletResponse {
    Wallet wallet = 1;
}